--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vsc-newproj",
+    "name": "vsc-newproj",
     "displayName": "vsc-newproj",
     "description": "New Project Creator for VSCode",
     "version": "0.0.1",
@@ -9,6 +9,7 @@
     "categories": [
         "Other"
     ],
+    "type": "module",
     "activationEvents": [
         "onCommand:vsc-newproj.createNewProject"
     ],
@@ -30,16 +31,19 @@
         "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
-        "@types/vscode": "^1.63.0",
         "@types/glob": "^7.1.4",
         "@types/mocha": "^9.0.0",
         "@types/node": "14.x",
+        "@types/vscode": "^1.63.0",
         "@typescript-eslint/eslint-plugin": "^5.1.0",
         "@typescript-eslint/parser": "^5.1.0",
+        "@vscode/test-electron": "^1.6.2",
         "eslint": "^8.1.0",
         "glob": "^7.1.7",
         "mocha": "^9.1.3",
-        "typescript": "^4.4.4",
-        "@vscode/test-electron": "^1.6.2"
+        "typescript": "^4.4.4"
+    },
+    "dependencies": {
+        "execa": "^6.0.0"
     }
 }
