--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
+        "@types/fs-extra": "^9.0.13",
         "@types/glob": "^7.1.4",
         "@types/mocha": "^9.0.0",
         "@types/node": "14.x",
@@ -41,5 +42,8 @@
         "glob": "^7.1.7",
         "mocha": "^9.1.3",
         "typescript": "^4.4.4"
+    },
+    "dependencies": {
+        "fs-extra": "^10.0.0"
     }
 }
